@@ -314,9 +314,9 @@ backup {
 #                     hide those servers from SQL, just use an appropriate
 #                     database query.
 #  statspage        - URL for Web Stats
-#                     This will be advertised in the Denora bot /whois.
-#                     Put a link to your HTML output file, or to phpDenora,
-#                     for example.
+#                     This will be advertised in the Denora reply to the
+#                     STATS command. Put a link to your HTML output file,
+#                     or to phpDenora, for example.
 
 netinfo {
     // required tokens
