@@ -263,10 +263,9 @@ void do_cstats(User * u, char *receiver, char *msg)
 
 static void make_stats(User * u, char *receiver, char *msg)
 {
-    uint32 letters = 0, words = 1, action = 0, smileys = 0, i = 0;
+    uint32 letters = 0, words = 1, action = 0, smileys = 0, i = 0, hour;
     char *buf;
     Channel *c;
-    uint32 hour;
 
     SET_SEGV_LOCATION();
 
@@ -314,8 +313,8 @@ static void make_stats(User * u, char *receiver, char *msg)
     /* update user */
     rdb_query
         (QUERY_LOW,
-         "UPDATE %s SET letters=letters+%i, words=words+%i, line=line+1, "
-         "actions=actions+%i, smileys=smileys+%d, lastspoke=%i, time%d=time%d+1 "
+         "UPDATE %s SET letters=letters+%d, words=words+%d, line=line+1, "
+         "actions=actions+%d, smileys=smileys+%d, lastspoke=%i, time%d=time%d+1 "
          "WHERE (uname=\'%s\' AND (chan=\'global\' OR chan=\'%s\'));",
          UStatsTable, letters, words, action, smileys, time(NULL), hour,
          hour, u->sgroup, c->sqlchan);
@@ -324,8 +323,8 @@ static void make_stats(User * u, char *receiver, char *msg)
 /* update chan */
     rdb_query
         (QUERY_LOW,
-         "UPDATE %s SET letters=letters+%i, words=words+%i, line=line+1, "
-         "actions=actions+%i, smileys=smileys+%d, lastspoke=%i, time%d=time%d+1 WHERE chan=\'%s\';",
+         "UPDATE %s SET letters=letters+%d, words=words+%d, line=line+1, "
+         "actions=actions+%d, smileys=smileys+%d, lastspoke=%i, time%d=time%d+1 WHERE chan=\'%s\';",
          CStatsTable, letters, words, action, smileys, time(NULL), hour,
          hour, c->sqlchan);
 }
