@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="132"
+VERSION_BUILD="133"
 
 # $Log$
+#
+# BUILD : 1.4.0.133 (SVN)
+# BUGS  : N/A
+# NOTES : Fixed some chanstats values going bad on certain systems (needs testing)
 #
 # BUILD : 1.4.0.132 (SVN)
 # BUGS  : N/A
